@@ -15,12 +15,12 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/clients")
 public class ClientController {
     private static final Logger logger = LoggerFactory.getLogger(ClientController.class);
+    private static final String VERIFIED = "verified";
 
     private final ClientServiceImpl clientService;
     private final ClientMapper clientMapper;
@@ -36,33 +36,35 @@ public class ClientController {
             produces = MediaType.APPLICATION_JSON_VALUE
     )
     public ResponseEntity<ClientDTO> createClient(@Valid @RequestBody ClientDTO clientDTO) {
-        try {
-            logger.debug("Received create client request: {}", clientDTO);
-            var clientModel = clientMapper.toModel(clientDTO);
-            logger.debug("Mapped to model: {}", clientModel);
-            var savedClient = clientService.createClient(clientModel);
-            logger.debug("Saved client: {}", savedClient);
-            var response = clientMapper.toDto(savedClient);
-            logger.debug("Returning response: {}", response);
-            return ResponseEntity.status(HttpStatus.CREATED).body(response);
-        } catch (Exception e) {
-            logger.error("Error creating client: ", e);
-            throw e;
-        }
+        logger.debug("Received create client request");
+        var clientModel = clientMapper.toModel(clientDTO);
+        logger.debug("Client model mapped successfully");
+        var savedClient = clientService.createClient(clientModel);
+        logger.debug("Client created successfully");
+        var response = clientMapper.toDto(savedClient);
+        logger.debug("Response mapped successfully");
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
     @GetMapping("/{clientId}")
     public ResponseEntity<ClientDTO> getClient(@PathVariable String clientId) {
+        logger.debug("Received get client request");
         var client = clientService.getClient(clientId);
-        return ResponseEntity.ok(clientMapper.toDto(client));
+        logger.debug("Client retrieved successfully");
+        var response = clientMapper.toDto(client);
+        logger.debug("Response mapped successfully");
+        return ResponseEntity.ok(response);
     }
     
     @GetMapping("/agent/{agentId}")
     public ResponseEntity<List<ClientDTO>> getClientsByAgentId(@PathVariable String agentId) {
+        logger.debug("Received get clients by agent id request");
         var clients = clientService.getClientsByAgentId(agentId);
+        logger.debug("Retrieved {} clients", clients.size());
         var clientDTOs = clients.stream()
                 .map(clientMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+        logger.debug("Response mapped successfully with {} clients", clientDTOs.size());
         return ResponseEntity.ok(clientDTOs);
     }
 
@@ -70,14 +72,21 @@ public class ClientController {
     public ResponseEntity<ClientDTO> updateClient(
             @PathVariable String clientId,
             @Valid @RequestBody ClientDTO clientDTO) {
+        logger.debug("Received update client request");
         var clientModel = clientMapper.toModel(clientDTO);
+        logger.debug("Client model mapped successfully");
         var updatedClient = clientService.updateClient(clientId, clientModel);
-        return ResponseEntity.ok(clientMapper.toDto(updatedClient));
+        logger.debug("Client updated successfully");
+        var response = clientMapper.toDto(updatedClient);
+        logger.debug("Response mapped successfully");
+        return ResponseEntity.ok(response);
     }
 
     @DeleteMapping("/{clientId}")
     public ResponseEntity<Void> deleteClient(@PathVariable String clientId) {
+        logger.debug("Received delete client request");
         clientService.deleteClient(clientId);
+        logger.debug("Client deleted successfully");
         return ResponseEntity.noContent().build();
     }
 
@@ -88,18 +97,20 @@ public class ClientController {
     public ResponseEntity<Map<String, Boolean>> verifyClient(
             @PathVariable String clientId,
             @RequestBody Map<String, String> payload) {
-
+        logger.debug("Received verify client request");
         String nric = payload.get("nric");
         if (nric == null || nric.isBlank()) {
-            return ResponseEntity.badRequest().body(Map.of("verified", false));
+            logger.warn("NRIC is null or blank");
+            return ResponseEntity.badRequest().body(Map.of(VERIFIED, false));
         }
 
         try {
             clientService.verifyClient(clientId, nric);
-            return ResponseEntity.ok(Map.of("verified", true));
+            logger.debug("Client verified successfully");
+            return ResponseEntity.ok(Map.of(VERIFIED, true));
         } catch (ClientNotFoundException | VerificationException e) {
-            logger.warn("Verification failed: {}", e.getMessage());
-            return ResponseEntity.ok(Map.of("verified", false));
+            logger.warn("Verification failed exception occurred: {}", e.getMessage());
+            return ResponseEntity.ok(Map.of(VERIFIED, false));
         }
     }
 }
